fix overflow

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,7 +9,7 @@ p {
 }
 
 body {
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 ul {
