--- a/sass/main.css
+++ b/sass/main.css
@@ -7062,7 +7062,7 @@ p {
 }
 
 body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 ul {
